--- a/index.html
+++ b/index.html
@@ -87,6 +87,41 @@
         </div>
         <video src="videos/smoke-background-optimized.mp4" class="showcase__video" autoplay loop muted></video>
     </section>
+    <section class="socials">
+        <h2 class="socials__title">Visit other Assassin's Creed channels:</h2>
+        <ul class="socials__list">
+            <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo" src="./images/facebook_logo.avif" alt=""></a></li>
+            <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo" src="./images/instagram_logo.avif" alt=""></a></li>
+            <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo" src="./images/twitch_logo.webp" alt=""></a></li>
+            <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo" src="./images/twitter_logo.avif" alt=""></a></li>
+            <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo" src="./images/youtube_logo.avif" alt=""></a></li>
+        </ul>
+    </section>
+    <footer class="footer">
+        <div class="footer__container">
+            <a class="footer__link" href="#"><img class="footer__logo" src="./images/UBI.PA_BIG.png" alt=""></a>
+            <button class="footer__button">Download Ubisoft Connect</button>
+            <a class="footer__region-link" href="#"><img class="footer__globe" src="./images/globe_logo.svg" alt="">Region</a>
+        </div>
+        <div class="footer__container">
+            <ul class="footer__link-list">
+                <li class="list__item"><a class="list__link" href="#">Privacy</a></li>
+                <li class="list__item"><a class="list__link" href="#">Terms of use</a></li>
+                <li class="list__item"><a class="list__link" href="#">Legal info</a></li>
+                <li class="list__item"><a class="list__link" href="#">Set cookies</a></li>
+            </ul>
+            <ul class="footer__link-list">
+                <li class="list__item"><a class="list__link" href="#">Ubisoft connect</a></li>
+                <li class="list__item"><a class="list__link" href="#">Investors</a></li>
+                <li class="list__item"><a class="list__link" href="#">Company</a></li>
+                <li class="list__item"><a class="list__link" href="#">Press</a></li>
+                <li class="list__item"><a class="list__link" href="#">Careers</a></li>
+                <li class="list__item"><a class="list__link" href="#">Locations</a></li>
+                <li class="list__item"><a class="list__link" href="#">Help</a></li>
+            </ul>
+            <p class="footer__text">&copy; 2024 Ubisoft Entertainment. All Rights Reserved. Ubisoft, Ubi.com and the Ubisoft logo are trademarks of Ubisoft Entertainment in the U.S. and/or other countries.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
