--- a/index.html
+++ b/index.html
@@ -27,101 +27,148 @@
 </head>
 
 <body>
-    <section class="showcase">
-        <h2 class="showcase__header">Hoodie<span>Mantle</span></h2>
-        <div class="showcase__content-wrapper">
-            <div class="showcase__content">
-                <div class="showcase-carousel">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide showcase-carousel__item">
-                            <div class="showcase-carousel__image-wripper">
-                                <div class="showcase-carousel__image-left">
-                                    <div class="showcase-carousel__image" style="background-image: url(images/1.png);"></div>
+    <div class="page">
+        <header class="header">
+            <a class="header__link"><img class="header__logo" src="./images/ubisoft_logo_h.png" alt=""></a>
+            <div class="header__container">
+                <div class="menu">
+                    <div class="menu__icon">
+                        <span></span>
+                    </div>
+                    <nav class="menu__container">
+                        <ul class="menu__list">
+                            <li class="menu__item"><a class="menu__link" href="#">Play</a></li>
+                            <li class="menu__item"><a class="menu__link" href="#">Shop</a></li>
+                            <li class="menu__item"><a class="menu__link" href="#">Explore</a></li>
+                            <li class="menu__item"><a class="menu__link" href="#">Help</a></li>
+                            <li class="menu__item"><a class="menu__link" href="#">Contacs</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <main class="content">
+            <section class="showcase">
+                <h2 class="showcase__header">Hoodie<span>Mantle</span></h2>
+                <div class="showcase__content-wrapper">
+                    <div class="showcase__content">
+                        <div class="showcase-carousel">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide showcase-carousel__item">
+                                    <div class="showcase-carousel__image-wripper">
+                                        <div class="showcase-carousel__image-left">
+                                            <div class="showcase-carousel__image"
+                                                style="background-image: url(images/1.png);">
+                                            </div>
+                                        </div>
+                                        <div class="showcase-carousel__image-right">
+                                            <div class="showcase-carousel__image"
+                                                style="background-image: url(images/1.png);">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <p>Front</p>
                                 </div>
-                                <div class="showcase-carousel__image-right">
-                                   <div class="showcase-carousel__image" style="background-image: url(images/1.png);"></div>
+                                <div class="swiper-slide showcase-carousel__item">
+                                    <div class="showcase-carousel__image-wripper">
+                                        <div class="showcase-carousel__image-left">
+                                            <div class="showcase-carousel__image"
+                                                style="background-image: url(images/2.png);">
+                                            </div>
+                                        </div>
+                                        <div class="showcase-carousel__image-right">
+                                            <div class="showcase-carousel__image"
+                                                style="background-image: url(images/2.png);">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <p>Front two</p>
+                                </div>
+                                <div class="swiper-slide showcase-carousel__item">
+                                    <div class="showcase-carousel__image-wripper">
+                                        <div class="showcase-carousel__image-left">
+                                            <div class="showcase-carousel__image"
+                                                style="background-image: url(images/3.png);">
+                                            </div>
+                                        </div>
+                                        <div class="showcase-carousel__image-right">
+                                            <div class="showcase-carousel__image"
+                                                style="background-image: url(images/3.png);">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <p>Side</p>
+                                </div>
+                                <div class="swiper-slide showcase-carousel__item">
+                                    <div class="showcase-carousel__image-wripper">
+                                        <div class="showcase-carousel__image-left">
+                                            <div class="showcase-carousel__image"
+                                                style="background-image: url(images/4.png);">
+                                            </div>
+                                        </div>
+                                        <div class="showcase-carousel__image-right">
+                                            <div class="showcase-carousel__image"
+                                                style="background-image: url(images/4.png);">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <p>Back</p>
                                 </div>
                             </div>
-                            <p>Front</p>
                         </div>
-                        <div class="swiper-slide showcase-carousel__item">
-                            <div class="showcase-carousel__image-wripper">
-                                <div class="showcase-carousel__image-left">
-                                    <div class="showcase-carousel__image" style="background-image: url(images/2.png);"></div>
-                                </div>
-                                <div class="showcase-carousel__image-right">
-                                    <div class="showcase-carousel__image" style="background-image: url(images/2.png);"></div>
-                                </div>
-                            </div>
-                            <p>Front two</p>
-                        </div>
-                        <div class="swiper-slide showcase-carousel__item">
-                            <div class="showcase-carousel__image-wripper">
-                                <div class="showcase-carousel__image-left">
-                                    <div class="showcase-carousel__image" style="background-image: url(images/3.png);"></div>
-                                </div>
-                                <div class="showcase-carousel__image-right">
-                                    <div class="showcase-carousel__image" style="background-image: url(images/3.png);"></div>
-                                </div>
-                            </div>
-                            <p>Side</p>
-                        </div>
-                        <div class="swiper-slide showcase-carousel__item">
-                            <div class="showcase-carousel__image-wripper">
-                                <div class="showcase-carousel__image-left">
-                                    <div class="showcase-carousel__image" style="background-image: url(images/4.png);"></div>
-                                </div>
-                                <div class="showcase-carousel__image-right">
-                                    <div class="showcase-carousel__image" style="background-image: url(images/4.png);"></div>
-                                </div>
-                            </div>
-                            <p>Back</p>
+                        <div class="showcase-navigation">
+                            <div class="showcase-navigation__prev"></div>
+                            <div class="showcase-navigation__next"></div>
                         </div>
                     </div>
                 </div>
-                <div class="showcase-navigation">
-                    <div class="showcase-navigation__prev"></div>
-                    <div class="showcase-navigation__next"></div>
-                </div>
+                <video src="videos/smoke-background-optimized.mp4" class="showcase__video" autoplay loop muted></video>
+            </section>
+            <section class="socials">
+                <h2 class="socials__title">Visit other Assassin's Creed channels:</h2>
+                <ul class="socials__list">
+                    <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo"
+                                src="./images/facebook_logo.avif" alt=""></a></li>
+                    <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo"
+                                src="./images/instagram_logo.avif" alt=""></a></li>
+                    <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo"
+                                src="./images/twitch_logo.webp" alt=""></a></li>
+                    <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo"
+                                src="./images/twitter_logo.avif" alt=""></a></li>
+                    <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo"
+                                src="./images/youtube_logo.avif" alt=""></a></li>
+                </ul>
+            </section>
+        </main>
+        <footer class="footer">
+            <div class="footer__container">
+                <a class="footer__link" href="#"><img class="footer__logo" src="./images/ubisoft_logo.png" alt=""></a>
+                <button class="footer__button">Download Ubisoft Connect</button>
+                <a class="footer__region-link" href="#"><img class="footer__globe" src="./images/globe_logo.svg"
+                        alt="">Region</a>
             </div>
-        </div>
-        <video src="videos/smoke-background-optimized.mp4" class="showcase__video" autoplay loop muted></video>
-    </section>
-    <section class="socials">
-        <h2 class="socials__title">Visit other Assassin's Creed channels:</h2>
-        <ul class="socials__list">
-            <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo" src="./images/facebook_logo.avif" alt=""></a></li>
-            <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo" src="./images/instagram_logo.avif" alt=""></a></li>
-            <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo" src="./images/twitch_logo.webp" alt=""></a></li>
-            <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo" src="./images/twitter_logo.avif" alt=""></a></li>
-            <li class="socials__item"><a class="socials__link" href="#"><img class="socials__logo" src="./images/youtube_logo.avif" alt=""></a></li>
-        </ul>
-    </section>
-    <footer class="footer">
-        <div class="footer__container">
-            <a class="footer__link" href="#"><img class="footer__logo" src="./images/UBI.PA_BIG.png" alt=""></a>
-            <button class="footer__button">Download Ubisoft Connect</button>
-            <a class="footer__region-link" href="#"><img class="footer__globe" src="./images/globe_logo.svg" alt="">Region</a>
-        </div>
-        <div class="footer__container">
-            <ul class="footer__link-list">
-                <li class="list__item"><a class="list__link" href="#">Privacy</a></li>
-                <li class="list__item"><a class="list__link" href="#">Terms of use</a></li>
-                <li class="list__item"><a class="list__link" href="#">Legal info</a></li>
-                <li class="list__item"><a class="list__link" href="#">Set cookies</a></li>
-            </ul>
-            <ul class="footer__link-list">
-                <li class="list__item"><a class="list__link" href="#">Ubisoft connect</a></li>
-                <li class="list__item"><a class="list__link" href="#">Investors</a></li>
-                <li class="list__item"><a class="list__link" href="#">Company</a></li>
-                <li class="list__item"><a class="list__link" href="#">Press</a></li>
-                <li class="list__item"><a class="list__link" href="#">Careers</a></li>
-                <li class="list__item"><a class="list__link" href="#">Locations</a></li>
-                <li class="list__item"><a class="list__link" href="#">Help</a></li>
-            </ul>
-            <p class="footer__text">&copy; 2024 Ubisoft Entertainment. All Rights Reserved. Ubisoft, Ubi.com and the Ubisoft logo are trademarks of Ubisoft Entertainment in the U.S. and/or other countries.</p>
-        </div>
-    </footer>
+            <div class="footer__container">
+                <ul class="footer__link-list">
+                    <li class="list__item"><a class="list__link" href="#">Privacy</a></li>
+                    <li class="list__item"><a class="list__link" href="#">Terms of use</a></li>
+                    <li class="list__item"><a class="list__link" href="#">Legal info</a></li>
+                    <li class="list__item"><a class="list__link" href="#">Set cookies</a></li>
+                </ul>
+                <ul class="footer__link-list">
+                    <li class="list__item"><a class="list__link" href="#">Ubisoft connect</a></li>
+                    <li class="list__item"><a class="list__link" href="#">Investors</a></li>
+                    <li class="list__item"><a class="list__link" href="#">Company</a></li>
+                    <li class="list__item"><a class="list__link" href="#">Press</a></li>
+                    <li class="list__item"><a class="list__link" href="#">Careers</a></li>
+                    <li class="list__item"><a class="list__link" href="#">Locations</a></li>
+                    <li class="list__item"><a class="list__link" href="#">Help</a></li>
+                </ul>
+                <p class="footer__text">&copy; 2024 Ubisoft Entertainment. All Rights Reserved. Ubisoft, Ubi.com and the
+                    Ubisoft logo are trademarks of Ubisoft Entertainment in the U.S. and/or other countries.</p>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
