частично добавлен адаптив

--- a/index.html
+++ b/index.html
@@ -160,13 +160,15 @@
                     <li class="list__item"><a class="list__link" href="#">Investors</a></li>
                     <li class="list__item"><a class="list__link" href="#">Company</a></li>
                     <li class="list__item"><a class="list__link" href="#">Press</a></li>
+                </ul>
+                <ul class="footer__link-list">
                     <li class="list__item"><a class="list__link" href="#">Careers</a></li>
                     <li class="list__item"><a class="list__link" href="#">Locations</a></li>
                     <li class="list__item"><a class="list__link" href="#">Help</a></li>
                 </ul>
-                <p class="footer__text">&copy; 2024 Ubisoft Entertainment. All Rights Reserved. Ubisoft, Ubi.com and the
-                    Ubisoft logo are trademarks of Ubisoft Entertainment in the U.S. and/or other countries.</p>
             </div>
+            <p class="footer__text">&copy; 2024 Ubisoft Entertainment. All Rights Reserved. Ubisoft, Ubi.com and the
+                Ubisoft logo are trademarks of Ubisoft Entertainment in the U.S. and/or other countries.</p>
         </footer>
     </div>
 </body>
